--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.5
-  provider: ^5.0.0
+  socket_io_client: ^1.0.0
+  path_provider: ^2.0.1
+  get: ^4.1.4
+  get_storage: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^2.0.1+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
