--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^2.0.1
   get: ^4.1.4
   get_storage: ^2.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
